# Yolov8-Powered-Safety-Equipment-Detection-System

./: .env.example  .gitignore  C:\GitHub\Yolov8-Worker-Safety-System\TEST_VERIFICATION.md  C:\GitHub\Yolov8-Worker-Safety-System\src\edge_deployment\inference_pipeline.py  C:\GitHub\Yolov8-Worker-Safety-System\src\edge_deployment\safety_rules_engine.py  C:\GitHub\Yolov8-Worker-Safety-System\src\edge_deployment\video_processor.py  CLAUDE.md  COLAB_FIX_3B3.md  DUAL_PIPELINE_ROADMAP.md  LICENSE  PHASE2A_EXECUTION_GUIDE.md  PROJECT_STATUS.md  README.md  SETUP.md  TESTING.md  TESTING_SUMMARY.md  TRAINING_RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
config/: compliance_rules.yaml  dataset.yaml  inference.yaml  mixed_dataset.yaml  models.yaml  performance_thresholds.yaml  roboflow.yaml
data/annotations/: class_mapping.yaml  class_mapping_public.yaml  classes.yaml
data/preprocessing/: __init__.py  augmentation.py  download_datasets.py  merge_datasets.py  merge_real_datasets.py
docs/: ARCHITECTURE.md  CAMERA_TESTING.md  COLAB_SETUP.md  DATA_SOURCES.md  OPTIMIZATION.md  PHASE2_DATA_COLLECTION.md  PHASE3_IMPLEMENTATION.md  README.md  ROBOFLOW_WORKFLOW_INTEGRATION.md  TEST_REPORT.md
examples/: __init__.py  basic_inference_example.py
notebooks/: COLAB_QUICKSTART.md  Colab_Training_PPE_Detection.ipynb  README.md
scripts/: compare_inference_backends.py  convert_to_onnx.py  download_models.sh  download_real_datasets.py  run_live_inference.py  run_local_video_inference.py  setup_datasets.sh  test_edge_inference.py
src/: __init__.py
src/edge_deployment/: __init__.py  inference_pipeline.py  metrics_collector.py  performance_profiler.py  (+3 more)
tests/: __init__.py  conftest.py  test_inference.py  test_yolov8_integration.py  test_yolov8_live_inference.py
(+8 files in other folders)
